--- a/index.html
+++ b/index.html
@@ -10,19 +10,13 @@
 <body>    
     
     <div class="wrapper">
-        <h1 data-text="CERN">CERN</h1>
-        <h2 data-text="HueMon">HueMan</h2>
+        <h1 data-text="BitCERNials">BitCERNials</h1>
+        <h2 data-text="HueMon">BRC-721</h2>
     </div>
 
     <div class="icon-container">
-        <a href="https://twitter.com/CERNOFFICIAL" target="_blank">
+        <a href="https://twitter.com/BitCERNials" target="_blank">
             <img src="images/twittericon.png" alt="Twitter" class="icon twitter-icon">
-        </a>
-        <a href="https://opensea.io" target="_blank">
-            <img src="images/openseaicon.png" alt="Opensea" class="icon opensea-icon">
-        </a>
-        <a href="https://discord.gg/DqghH54Z" target="_blank">
-            <img src="images/discordicon1.png" alt="Discord" class="icon discord-icon">
         </a>
     </div>
 
@@ -32,10 +26,6 @@
     <div class="graph-container">
         <div class="graph"></div>
     </div>
-
-    <div class="iframe-container">
-        <iframe src="https://ipfs.thirdwebcdn.com/ipfs/QmbAgC8YwY36n8H2kuvSWsRisxDZ15QZw3xGZyk9aDvcv7/erc721.html?contract=0x5027145904AC3789B5a64E5656021F1CFdeA309A&chain=%7B%22name%22%3A%22Goerli%22%2C%22chain%22%3A%22ETH%22%2C%22rpc%22%3A%5B%22https%3A%2F%2Fgoerli.rpc.thirdweb.com%2F5a9bc94b87f7cbbbfbbc234bf1e07f0adf5f3cf3012c9f26f9fc9820d64df93a%22%5D%2C%22nativeCurrency%22%3A%7B%22name%22%3A%22Goerli+Ether%22%2C%22symbol%22%3A%22ETH%22%2C%22decimals%22%3A18%7D%2C%22shortName%22%3A%22gor%22%2C%22chainId%22%3A5%2C%22testnet%22%3Atrue%2C%22slug%22%3A%22goerli%22%7D" width="600px" height="600px" style="max-width:100%;" frameborder="0"></iframe>
-    </div> 
 
     <audio id="myAudio" src="audio/aliencoms.mp3" controls></audio>
 
