--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <audio id="myAudio" src="audio/aliencoms.mp3" controls></audio>
 
-
+    <img id="floating-image" src="images/Protector0.png" alt="Descriptive Text">
 
     <script>
         window.addEventListener("scroll", function() {
