--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     
     <div class="wrapper">
         <h1 data-text="BitCERNials">BitCERNials</h1>
-        <h2 data-text="HueMon">BRC-721</h2>
+        <h2 data-text="HueMon">BRC-420</h2>
     </div>
 
     <div class="icon-container">
-        <a href="https://twitter.com/BitCERNials" target="_blank">
+        <a href="https://twitter.com/pelpa333" target="_blank">
             <img src="images/twittericon.png" alt="Twitter" class="icon twitter-icon">
         </a>
     </div>
